mType/tests/testFiles/import/pass/modules/sub2/RelativeModule2.mt
class RelativeClass2 {
    fun getValue(): Int {
        return 2;
    }
}
