mType/tests/testFiles/import/error/modules/SameName1.mt
class SameName {
    fun getSource(): Int {
        return 1;
    }
}
